# obby-rs

./: .gitignore  Cargo.toml  Readme.md  build-web.sh  deploy.sh  index.html
.github/workflows/: deploy.yml
cliplib/: Cargo.toml
cliplib/src/: lib.rs
game/: Cargo.toml
game/src/: body.rs  context.rs  entity.rs  event.rs  game.rs  lib.rs  map.rs  misc.rs  spawn.rs  tile.rs  update.rs
obby/: Cargo.toml
obby/src/: assets.rs  main.rs
res/: maps.txt  sfx.csv
res/imgs/: tileset.png~
res/maps/: map01.tmx  map02.tmx  map03.tmx  map04.tmx  map05.tmx  map06.tmx  map07.tmx  map08.tmx  map09.tmx  tileset.tsx
