[workspace]
resolver = "3"
members = ["obby", "game", "cliplib"]

[workspace.dependencies]
glam = "0.27.0"
macroquad = {version = "0.4", features = ["audio"]}
game ={ path = "game"}
endlessgrid = "0.2.3"
tiled = {version = "0.14.0", features = ["wasm"]}
parry2d = "0.21.1"
cliplib = { path = "cliplib" }
gamepads = {version = "0.1.7", default-features = false}

[profile.dev]
opt-level = 1
